--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block head%}
+<title>Profile</title>
+{% endblock %}
+
+{% block body %}
+
 <h1 class="title">
-  Welcome, {{ current_user.email }}!!!
+  Welcome, {{ name }}!!!
 </h1>
 {% endblock %}
