--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,6 +31,12 @@
 
             <div class="field">
                 <div class="control">
+                    <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
+                </div>
+            </div>
+
+            <div class="field">
+                <div class="control">
                     <input class="input is-large" type="password" name="password" placeholder="Password">
                 </div>
             </div>
