--- a/templates/view_option/view_account.html
+++ b/templates/view_option/view_account.html
@@ -12,7 +12,7 @@
     </h1>
 
     <ul class="chooing-option">
-        <li><a href="#">View profile</a></li>
+        <li><a href="{{ url_for('profile') }}">View profile</a></li>
         <li><a href="#">Change password</a></li>
         <li><a href="#">Add new payment</a></li>
         <li><a href="#">Order history</a></li>
