--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block body%}
     <div class = "block">
-        <div class = "navbar" role="navigation" aria-label="main navigation">
+        <div class = "navbar is-primary" role="navigation" aria-label="main navigation">
             <div class = "navbar-brand">
                 <a href = "#" class = "nav-item">
                     <img src="../static/img/app_logo.jpg" alt = "site-logo" style = "max-height: 100px" class = "py-2 px-2">
