--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,47 @@
 
     {% block head %}{% endblock %}
 </head>
-
+{% if request.url_rule.endpoint != "confirm_order" and request.url_rule.endpoint != "order_status" %}
 <body>
+  <div class = "block">
+    <div class = "navbar nav-color" role="navigation" aria-label="main navigation">
+        <div class = "navbar-brand">
+            <a href = "#" class = "nav-item">
+                <img src="../static/img/app_logo.jpg" alt = "site-logo" style = "max-height: 100px" class = "py-2 px-2">
+            </a>
+        </div>
+
+    <nav class = "navbar-left navbar-expand-lg navbar-light bg-light">
+        <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar">
+            <span class = "navbar-toggler-icon"></span>
+        </button>
+        <div class = "collapse navbar-collapse" id = "navbar">
+            <div class = "navbar-nav">
+              <a class = "nav-item" href = "{{ url_for('menu_option') }}">Menu</a>
+                <a class = "nav-item" href = "{{ url_for('view_account') }}">Account</a>
+                <a class = "nav-item" href = "{{ url_for('contact_us') }}">Contact</a>
+            </div>
+        </div>
+    </nav>
+</div>
+    </div>
+<script src = "index.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+  crossorigin="anonymous"
+></script>
+{% endif %}
     {% block body %}{% endblock %}
     <!-- <footer class="footer">
         <div class="content has-text-centered is-italic has-text-grey">
