--- a/templates/login.html
+++ b/templates/login.html
@@ -15,11 +15,13 @@
 </div>
 <a class = "box has-text-centered" href="{{ url_for('menu_option') }}">Menu</a>
 <a class = "box has-text-centered" href="{{ url_for('logout') }}">Logout</a>
+
 {% else %}
-<div class="column is-4 is-offset-4">
-    <h3 class="title has-text-centered is-size-1 has-text-white">Login</h3>
-    <br>
-    <div class="box">
+<div class="column is-4 is-offset-4 ">
+
+    <div class="box is-mobile">
+
+        <h2 class="title has-text-centered is-size-1 has-text-black">Login</h2>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
@@ -28,22 +30,47 @@
         {% endif %}
         {% endwith %}
         <form method="POST" action="/login">
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
-                </div>
-            </div>
+                    <div class="field">
+                        <label for="" class="label">Email</label>
+                        <p class="control has-icons-left has-icons-right">
+                            <input class="input" type="email" placeholder="example123@gmail.com" required autofocus>
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-envelope"></i>
+                            </span>
+                            <span class="icon is-small is-right"><i class="fas fa-check"></i>
+                            </span>
+                        </p>
+                    </div>
 
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your password">
-                </div>
-            </div>
+                    <div class="field">
+                        <label for="" class="label">Password</label>
+                        <p class="control has-icons-left">
+                            <input class="input" type="password" placeholder="*******" required>
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                        </p>
+                    </div>
+                    <div class="level options is-mobile">
+                        <label for="" class="checkbox" level-left>
+                            <input type="checkbox">
+                                Remember me
+                        </label>
+                        <a class="btn btn-link level-right" href="#">
+                            Forgot Password?
+                        </a>
 
-            <button class="login-button is-size-5">Login</button>
+                    </div>
+                    <span class="field" >
+                        <p class="control">
+                            <button class="button is-success is-large is-fullwidth">
+                            Login
+                            </button>
+                        </p>
+                    </span>
         </form>
-        <br>
         <a href="{{ url_for('signup') }}" class = "button is-block is-info is-large is-fullwidth">Signup</a>
+
     </div>
 </div>
 {% endif %}
