user order history

--- a/templates/view_option/view_account.html
+++ b/templates/view_option/view_account.html
@@ -12,7 +12,7 @@
         <li><a class = "menu-option" href="{{ url_for('profile') }}">View profile</a></li>
         <li><a class = "menu-option" href="#">Change password</a></li>
         <li><a class = "menu-option" href="#">Add new payment</a></li>
-        <li><a class = "menu-option" href="#">Order history</a></li>
+        <li><a class = "menu-option" href="{{ url_for('order_history') }}">Order history</a></li>
         <li><a class = "menu-option" href="{{ url_for('logout') }}">Logout</a></li>
     </ul>
 
