finish user order-history

--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
                     <div class="field">
                         <label for="" class="label">Email</label>
                         <p class="control has-icons-left has-icons-right">
-                            <input class="input" type="email" placeholder="example123@gmail.com" required autofocus>
+                            <input class="input" name="email" type="email" placeholder="example123@gmail.com" required autofocus>
                             <span class="icon is-small is-left">
                                 <i class="fas fa-envelope"></i>
                             </span>
@@ -45,7 +45,7 @@
                     <div class="field">
                         <label for="" class="label">Password</label>
                         <p class="control has-icons-left">
-                            <input class="input" type="password" placeholder="*******" required>
+                            <input class="input" type="password" name="password" placeholder="*******" required>
                             <span class="icon is-small is-left">
                                 <i class="fas fa-lock"></i>
                             </span>
