--- a/templates/manager.html
+++ b/templates/manager.html
@@ -16,6 +16,9 @@
                 <a href="{{ url_for('customer_manager') }}" class="box has-text-centered has-text-weight-bold">
                     Customer manager
                 </a>
+                <a href="{{ url_for('order_manager') }}" class="box has-text-centered has-text-weight-bold">
+                    Order manager
+                </a>
                 <a href="{{ url_for('most_common_dishes_manager') }}" class="box has-text-centered has-text-weight-bold">
                     Most common Dishes
                 </a>
