--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,69 +1,83 @@
 {% extends "base.html" %}
 
 {% block head%} 
-    <title>Manager</title>
+    <title>Home</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style_view_menu.css') }}">
 
 {%endblock%}
 {% block body%}
-<h1 class="has-text-centered is-size-1 has-text-white">
-    Menu manager
-</h1>
-<section class="section">
-    <div class="container">
-        <div class=" columns is-vcentered has-text-centered">
-            <div class="column is-12">
-                <a href="{{ url_for('customer_manager') }}" class="box has-text-centered has-text-weight-bold">
-                    Customer manager
-                </a>
-                <a href="{{ url_for('order_manager') }}" class="box has-text-centered has-text-weight-bold">
-                    Order manager
-                </a>
-                <a href="{{ url_for('most_common_dishes_manager') }}" class="box has-text-centered has-text-weight-bold">
-                    Most common Dishes
-                </a>
-                <a href="{{ url_for('new_dishes_manager') }}" class="box has-text-centered has-text-weight-bold">New Dishes</a>
-                <a href="{{ url_for('combo_manager') }}" class="box has-text-centered has-text-weight-bold">Combo</a>
-                <a href="{{ url_for('logout') }}" class="box has-text-centered has-text-weight-bold">
-                    Log out
-                </a>
-            </div>
-        </div>
-        
-    </div>
-</section>
+
+
+<div class = "box bg-dark" >
+    <div class="tabs is-small is-centered is-box">
+  <ul>
+      <li>
+        <a style="color:rgb(255, 200, 0);">
+            <b>Promo</b>
+        </a>
+    </li>
+    <li>
+        <a href="{{ url_for('most_common_dishes_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>Most Common Dishes</b>
+        </a>
+    </li>
+    <li>
+        <a href="{{ url_for('new_dishes_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>New Dishes</b>
+        </a>
+    </li>
+    <li>
+        <a href="{{ url_for('combo_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>Combo</b>
+        </a>
+    </li>
+  </ul>
+</div>
+</div>
 
 
 <section class="section">
     <div class="container">
         <div class=" columns has-text-centered is-mobile">
             <div class="column is-5">
-                <a class = "box has-text-weight-bold has-text-black" href="{{ url_for('appetizers_manager') }}">Appetizers</a>
+                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('appetizers_manager') }}">
+                    <b><strong>Appetizers</strong></b>
+                </a>
             </div>
             <div class="column is-2"></div>
             <div class="column is-5">
-                <a class = "box has-text-weight-bold has-text-black" href="{{ url_for('soup_manager') }}">Soup</a>
+                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('soup_manager') }}">
+                    <b><strong>Soup</strong></b>
+                </a>
             </div>
         </div>
         <div class=" columns has-text-centered is-mobile">
             <div class="column is-5">
-                <a class = "box has-text-weight-bold has-text-black" href="{{ url_for('salad_manager') }}">Salad</a>
+                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('salad_manager') }}">
+                    <b><strong>Salad</strong></b>
+                </a>
             </div>
             <div class="column is-2"></div>
             <div class="column is-5">
-                <a class = "box has-text-weight-bold has-text-black" href="{{ url_for('main_dishes_manager') }}">Main dishes</a>
+                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('main_dishes_manager') }}">
+                    <b><strong>Main dishes</strong></b>
+                </a>
             </div>
         </div>
         <div class=" columns has-text-centered is-mobile">
             <div class="column is-5">
-                <a class = "box has-text-weight-bold has-text-black" href="{{ url_for('dessert_manager') }}">Dessert</a>
+                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('dessert_manager') }}">
+                    <b><strong>Dessert</strong></b>
+                </a>
             </div>
             <div class="column is-2"></div>
             <div class="column is-5">
-                <a class = "box has-text-weight-bold has-text-black" href="{{ url_for('drinks_manager') }}">Drinks</a>
+                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('drinks_manager') }}">
+                    <b><strong>Drinks</strong></b>
+                </a>
             </div>
         </div>
     </div>
 </section>
-
+</div>
 {%endblock%}
