add confrim password

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                 {% endif %}
                 <ul >
                     <li>
-                        <a style="color:orange;" class = "nav-item" href="{{ url_for('order_manager') }}"><b>Your Order</b></a>
+                        <a style="color:orange;" class = "nav-item" href="{{ url_for('order_history') }}"><b>Your Order</b></a>
                     </li>
                     <li>
                         <a style="color:orange;" class = "nav-item" href = "{{ url_for('view_account') }}"><b>Account</b></a>
