--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   <div class = "block " >
     <div class = "navbar nav-color " role="navigation" aria-label="main navigation" >
         <div class = "navbar-brand">
-            <a href = "#" class = "nav-item">
+            <a href = "{{ url_for('menu_option') }}" class = "nav-item">
                 <img src="../static/img/app_logo.jpg" alt = "site-logo" style = "max-height: 100px" class = "py-2 px-2">
             </a>
         </div>
@@ -54,9 +54,11 @@
                     <li>
                         <a style="color:orange;" class = "nav-item" href = "{{ url_for('view_account') }}"><b>Account</b></a>
                     </li>
+                    {% if current_user.id == 1 %}
                     <li>
                         <a style="color:orange;" class = "nav-item" href="{{ url_for('customer_manager') }}"><b>Customer manager</b></a>
                     </li>
+                    {% endif %}
                     <li>
                         <a style="color:orange;" class = "nav-item" href = "{{ url_for('contact_us') }}"><b>Contact</b></a>
                     </li>
