--- a/templates/view_option/contact_us.html
+++ b/templates/view_option/contact_us.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "base.html" %}
+
+{% block head%} 
     <title>Contact us</title>
-</head>
-<body>
-    
-</body>
-</html>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style_view_account.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style_pre_login.css') }}">
+
+{%endblock%}
+{% block body%}
+<!--Ông làm phần contact us nha-->
+<!--Làm đơn giản kiểu đưa ra mấy cái contact info đc r-->
+{%endblock%}
+
