--- a/templates/menu_option.html
+++ b/templates/menu_option.html
@@ -9,7 +9,13 @@
 <br>
 <br>
 <br>
-
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    <div class="notification is-danger">
+        {{ messages[0] }}
+    </div>
+{% endif %}
+{% endwith %}
 <body>
     <a class = "menu-option" href="{{ url_for('view_menu') }}">View menu</a>
         <a class = "menu-option" href="{{ url_for('view_account') }}">View account</a>
