--- a/templates/view_option/view_account.html
+++ b/templates/view_option/view_account.html
@@ -10,7 +10,7 @@
 <br>
     <ul class="choosing-option">
         <li><a class = "menu-option" href="{{ url_for('profile') }}">View profile</a></li>
-        <li><a class = "menu-option" href="#">Change password</a></li>
+        <li><a class = "menu-option" href="{{ url_for('change_password') }}">Change password</a></li>
         <li><a class = "menu-option" href="#">Add new payment</a></li>
         <li><a class = "menu-option" href="{{ url_for('order_history') }}">Order history</a></li>
         <li><a class = "menu-option" href="{{ url_for('logout') }}">Logout</a></li>
