--- a/templates/manager.html
+++ b/templates/manager.html
@@ -11,11 +11,6 @@
 <div class = "box bg-dark" >
     <div class="tabs is-small is-centered is-box">
   <ul>
-      <li>
-        <a style="color:rgb(255, 200, 0);">
-            <b>Promo</b>
-        </a>
-    </li>
     <li>
         <a href="{{ url_for('most_common_dishes_manager') }}" style="color:rgb(255, 200, 0);">
             <b>Most Common Dishes</b>
@@ -31,52 +26,70 @@
             <b>Combo</b>
         </a>
     </li>
+    <li>
+        <a href="{{ url_for('appetizers_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>Appetizers</b>
+        </a>
+    </li>
   </ul>
 </div>
 </div>
 
+<div class = "box bg-dark" >
+    <div class="tabs is-small is-centered is-box">
+  <ul>
+    <li>
+        <a href="{{ url_for('soup_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>Soup</b>
+        </a>
+    </li>
+    <li>
+        <a href="{{ url_for('salad_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>Salad</b>
+        </a>
+    </li>
+    <li>
+        <a href="{{ url_for('main_dishes_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>Main dishes</b>
+        </a>
+    </li>
+    <li>
+        <a href="{{ url_for('dessert_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>Dessert</b>
+        </a>
+    </li>
+    <li>
+        <a href="{{ url_for('drinks_manager') }}" style="color:rgb(255, 200, 0);">
+            <b>Drinks</b>
+        </a>
+    </li>
+  </ul>
+</div>
+</div>
 
 <section class="section">
     <div class="container">
+
         <div class=" columns has-text-centered is-mobile">
-            <div class="column is-5">
-                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('appetizers_manager') }}">
-                    <b><strong>Appetizers</strong></b>
+            <div class="column is-2"></div>
+            <div class="column is-8">
+                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('customer_manager') }}">
+                    <b><strong>Customer manager</strong></b>
                 </a>
             </div>
             <div class="column is-2"></div>
-            <div class="column is-5">
-                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('soup_manager') }}">
-                    <b><strong>Soup</strong></b>
-                </a>
-            </div>
         </div>
+
         <div class=" columns has-text-centered is-mobile">
-            <div class="column is-5">
-                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('salad_manager') }}">
-                    <b><strong>Salad</strong></b>
+            <div class="column is-2"></div>
+            <div class="column is-8">
+                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('order_manager') }}">
+                    <b><strong>Order manager</strong></b>
                 </a>
             </div>
             <div class="column is-2"></div>
-            <div class="column is-5">
-                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('main_dishes_manager') }}">
-                    <b><strong>Main dishes</strong></b>
-                </a>
-            </div>
         </div>
-        <div class=" columns has-text-centered is-mobile">
-            <div class="column is-5">
-                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('dessert_manager') }}">
-                    <b><strong>Dessert</strong></b>
-                </a>
-            </div>
-            <div class="column is-2"></div>
-            <div class="column is-5">
-                <a class = "box has-text-weight-bold" style="background-color:rgb(255, 132, 0);" href="{{ url_for('drinks_manager') }}">
-                    <b><strong>Drinks</strong></b>
-                </a>
-            </div>
-        </div>
+
     </div>
 </section>
 </div>
