--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 
 
 </div>
-      <nav class = "navbar-right navbar-expand-lg navbar-dark bg-dark">
+      <nav class = "navbar-right navbar-expand-lg navbar-dark bg-dark nav-margin">
         <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar">
             <span class = "navbar-toggler-icon is-primary"></span>
         </button>
