--- a/templates/signup.html
+++ b/templates/signup.html
@@ -33,9 +33,9 @@
         {% endwith %}
         <form action="/signup" method="POST">
             <div class="field">
-                <label class="label">Username</label>
+                <label class="label">Your name</label>
                 <div class="control has-icons-left">
-                    <input class="input" type="text" placeholder="Enter your username">
+                    <input class="input" name="name" type="text" placeholder="Enter your username">
                     <span class="icon is-small is-left">
                         <i class="fa fa-user"></i>
                     </span>
