--- a/templates/order_status.html
+++ b/templates/order_status.html
@@ -76,7 +76,7 @@
 
         <p class="" >Food is on the way</p>
         <p class="is-size-3 has-text-weight-bold">
-            Your order í being delivered
+            Your order is being delivered
         </p>
     </h1>
     <p class="has-text-grey has-text-weight-bold is-size-2 has-text-centered three-dots">...</p>
