--- a/templates/customer_manager.html
+++ b/templates/customer_manager.html
@@ -7,6 +7,7 @@
 {% block body %}
 <div class="content">
     <h1 class = "has-text-centered">Customer manager</h1>
+    <a href="{{ url_for('customer_manager') }}" class="box has-text-centered">Click here to update order</a>
     <table>
         <tr>
             <th>Customer name</th>
